Set OP completion date